agentforce-medtech-complaints/force-app/main/default/objects/Case/fields/AE_Screening_Reason__c.field-meta.xml
<CustomField>
    <fullName>AE_Screening_Reason__c</fullName>
    <description>Why the adverse-event screen did or did not flag this complaint.</description>
    <inlineHelpText>Why the adverse-event screen did or did not flag this complaint.</inlineHelpText>
    <label>AE Screening Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>