agentforce-medtech-complaints/force-app/main/default/objects/Case/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <description>Device name or model the complaint is about.</description>
    <inlineHelpText>Device name or model the complaint is about.</inlineHelpText>
    <label>Device Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>