agentforce-medtech-complaints/force-app/main/default/objects/Case/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date the device problem happened.</description>
    <inlineHelpText>Date the device problem happened.</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>