agentforce-medtech-complaints/force-app/main/default/objects/Case/fields/Lot_or_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_or_Serial_Number__c</fullName>
    <description>Lot or serial number from the device label.</description>
    <inlineHelpText>Lot or serial number from the device label.</inlineHelpText>
    <label>Lot or Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>