agentforce-medtech-complaints/force-app/main/default/objects/Case/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Device manufacturer, if the customer knows it.</description>
    <inlineHelpText>Device manufacturer, if the customer knows it.</inlineHelpText>
    <label>Manufacturer</label>
    <length>120</length>
    <type>Text</type>
</CustomField>